force-app/main/default/objects/Achievement_Category__c/Achievement_Category__c.object-meta.xml
<CustomObject>
    <description>Achievement Category</description>
    <label>Achievement Category</label>
    <nameField>
        <label>Achievement Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievement Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>