force-app/main/default/objects/Achievement_Category__c/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <formula>IF(ISBLANK(Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Name), &apos;&apos;, Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Name &amp; &apos;&gt;&apos;)
&amp;
IF(ISBLANK(Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Name), &apos;&apos;, Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Name &amp; &apos;&gt;&apos;)
&amp;
IF(ISBLANK(Parent_Category__r.Parent_Category__r.Parent_Category__r.Name), &apos;&apos;, Parent_Category__r.Parent_Category__r.Parent_Category__r.Name &amp; &apos;&gt;&apos;)
&amp;
IF(ISBLANK(Parent_Category__r.Parent_Category__r.Name), &apos;&apos;, Parent_Category__r.Parent_Category__r.Name &amp; &apos;&gt;&apos;)
&amp;
IF(ISBLANK(Parent_Category__r.Name), &apos;&apos;, Parent_Category__r.Name &amp; &apos;&gt;&apos;)
&amp;
Name</formula>
    <label>Hierarchy</label>
    <type>Text</type>
</CustomField>