force-app/main/default/objects/Achievement_Category__c/fields/Number_of_Achievements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Achievements__c</fullName>
    <label>Number of Achievements</label>
    <summaryForeignKey>Achievement__c.Achievement_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>