force-app/main/default/objects/Achievement_Category__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Category</label>
    <referenceTo>Achievement_Category__c</referenceTo>
    <relationshipLabel>Sub-Categories</relationshipLabel>
    <relationshipName>SubCategories</relationshipName>
    <type>Lookup</type>
</CustomField>